--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ p {
 
 }
 
+li {
+  list-style: none
+}
+
 .spinner {
   justify-self: center;
   align-self: center
@@ -97,6 +101,22 @@ p {
 
 .album {
   margin: 10px;
+}
+
+/*Login*/
+.participantList {
+  
+}
+.participant {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center
+}
+
+.adminForm {
+  display: flex;
+  flex-direction: column;  
 }
 
 
