--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,11 @@ a {
   color: black;
 }
 
+a:hover {
+  color: yellow;
+}
+
+
 p {
   color: rgb(15, 15, 15);
 }
@@ -71,26 +76,24 @@ p {
 .spons-gold{
   height: 200px;
   width: 250px;
-  margin: 10px;
-  border-color: #ffd700;
-  border-style: solid;
-  border-width: 5;
+  
 }
 .spons-silver{
   height: 150px;
   width: 200px;
-  margin: 10px;
+  
 }
 .spons-brons{
   height: 100px;
   width: 150px;
-  margin: 10px;
+  
 }
 
 .spons-img-gold{
   max-height: 150px;
   max-width: 200px;
 }
+
 .spons-img-silver{
   max-height: 100px;
   max-width: 150px;
@@ -99,7 +102,6 @@ p {
   max-height: 50px;
   max-width: 100px;
 }
-
 
 
 
