--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@ a {
   color: black;
 }
 
+a :hover{
+  opacity: 70%;
+}
+
 p {
   color: rgb(15, 15, 15);
 }
@@ -55,6 +59,7 @@ p {
 
 .tabLink:hover {
   cursor: pointer;
+  color: red;
 }
 
 .card-title {
@@ -124,6 +129,12 @@ p {
   visibility: hidden;
   height: 0;
 }
+
+.media-container :hover{
+  opacity: 80%;
+  text-decoration: none;
+}
+
 
 @media (max-width: 1040px) {
   .donate{
