--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,6 @@ a {
   text-decoration: none;
 }
 
-a :hover {
-  filter: opacity(70%);
-}
-
 p {
   color: rgb(15, 15, 15);
 }
@@ -158,6 +154,14 @@ i {
   text-decoration: none;
 }
 
+.onenews {
+  transition: "transform 0.2s ease-in-out";
+}
+
+.onenews :hover {
+  transform: translatex(5px);
+}
+
 @media (max-width: 1040px) {
   .donate {
     visibility: hidden;
@@ -166,4 +170,34 @@ i {
     visibility: visible;
     height: 100%;
   }
+}
+
+.card-box {
+  display: flex;
+  position: relative;
+  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+  background-color: white;
+  border-radius: 4px;
+  padding: 32px 24px;
+  margin: 12px 0px 12px 0px;
+  text-decoration: none;
+  flex-wrap: wrap;
+}
+
+.card-box-hoverable {
+  display: flex;
+  position: relative;
+  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+  background-color: white;
+  border-radius: 4px;
+  padding: 32px 24px;
+  margin: 12px 0px 12px 0px;
+  text-decoration: none;
+  flex-wrap: wrap;
+  transition: all 0.2s ease-out;
+}
+
+.card-box-hoverable:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 6px 10px rgba(38, 38, 38, 0.2);
 }
