--- a/src/components/challenge/coronaEdition.css
+++ b/src/components/challenge/coronaEdition.css
@@ -11,11 +11,18 @@
   border-radius: 10px;
   transition: all 0.2s ease-out;
   cursor: pointer;
+  backface-visibility: hidden;
+  -webkit-font-smoothing: subpixel-antialiased;
+  will-change: transform;
 }
 
 .button-style:hover {
-  transform: scale(1.05);
   box-shadow: 0px 6px 10px rgba(38, 38, 38, 0.2);
+  -webkit-transform: scale(1.05) translate3d(0, 0, 0) perspective(1px);
+  -moz-transform: scale(1.05) translate3d(0, 0, 0) perspective(1px);
+  -o-transform: scale(1.05) translate3d(0, 0, 0) perspective(1px);
+  -ms-transform: scale(1.05) translate3d(0, 0, 0) perspective(1px);
+  transform: scale(1.05) translate3d(0, 0, 0) perspective(1px);
 }
 
 .icon-style {
