Add styles and examples to entryModal

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,10 @@ i {
   flex-wrap: wrap;
 }
 
+.card-box > div {
+  border: none;
+}
+
 .card-box-hoverable {
   display: flex;
   position: relative;
