Change to slick carousel and gray background

--- a/src/components/challenge/coronaEdition.css
+++ b/src/components/challenge/coronaEdition.css
@@ -51,6 +51,18 @@
   background-color: #11999e !important;
 }
 
+.slick-arrow.slick-prev:before,
+.slick-arrow.slick-next:before {
+  color: black;
+}
+
+.entry-modal-background {
+  width: 100%;
+  height: 350px;
+  position: relative;
+  background-color: lightgray;
+}
+
 @media (max-width: 1200px) {
   .upload-button {
     position: fixed;
