--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,21 @@ i {
   color: rgb(201, 197, 197);
 }
 
+.banner-wrapper {
+  width: 100%;
+  height: 0px;
+  padding-top: 33.73%;
+  position: relative;
+  background-color: rgb(236, 236, 236);
+}
+
+.banner {
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
 .card-box {
   display: flex;
   position: relative;
