--- a/src/components/challenge/coronaEdition.css
+++ b/src/components/challenge/coronaEdition.css
@@ -53,7 +53,17 @@
 
 .slick-arrow.slick-prev:before,
 .slick-arrow.slick-next:before {
+  background-image: radial-gradient(at center, #ffffff 40%, transparent 55%);
+  padding-top: 5px;
+  opacity: 1;
   color: black;
+  font-size: 40px !important;
+  transition: all 0.2s ease-in-out;
+}
+
+.slick-arrow.slick-prev:hover::before,
+.slick-arrow.slick-next:hover::before {
+  transform: scale(1.1);
 }
 
 .entry-modal-background {
