--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,10 @@ i {
   color: rgb(201, 197, 197);
 }
 
+.brand-title {
+  color: #fff !important;
+}
+
 .banner-wrapper {
   width: 100%;
   height: 0px;
@@ -77,6 +81,22 @@ i {
   position: absolute;
   top: 0px;
   left: 0px;
+  opacity: 0.8;
+}
+
+.center-absolute {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+}
+
+.countdown {
+  font-size: calc(2em + 3vw);
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .card-box {
