--- a/src/components/media/media.css
+++ b/src/components/media/media.css
@@ -3,6 +3,18 @@
   background-color: #11999e;
 }
 
+.article-placeholder {
+  width: 100%;
+  height: 80%;
+  background-color: rgb(223, 221, 217);
+}
+
+.article-placeholder-row {
+  height: 20px;
+  background-color: rgb(216, 203, 186);
+  margin: 15px 20px;
+}
+
 .media-container {
   padding-top: 40;
   min-height: 70vh;
