Add result tipsrunda

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import "./components/challenge/coronaEdition.css";
+@import "./components/fortrampet/fortrampet.css";
 @import "./components/sponsor/sponsor.css";
 @import "./components/media/media.css";
 @import "./components/register/register.css";
