Add functional and cotton material for shirt

--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -71,8 +71,12 @@
   align-items: center;
 }
 
+.select-buttons {
+  flex: 1;
+}
+
 .delete-icon {
-  width: 50px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
