Add cap to order
* Add react image gallery for shirts and caps

--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,10 @@ i {
   will-change: transform;
 }
 
+.button-style.small {
+  width: 30px !important;
+}
+
 .button-style:active {
   transition: none;
   filter: brightness(85%);
