--- a/src/components/sponsor/sponsor.css
+++ b/src/components/sponsor/sponsor.css
@@ -30,3 +30,27 @@
   max-height: 70px;
   max-width: 120px;
 }
+
+.scroll-container {
+  margin-top: 40px;
+  width: fit-content;
+  background-color: #dfeff1;
+  overflow: hidden;
+  margin-left: -50%;
+}
+
+.scroll-content {
+  display: inline-flex;   /* Align items in a row */
+  animation: scroll 150s linear infinite; /* Infinite scrolling animation */
+}
+
+@keyframes scroll {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(-50%);
+  }
+}
+
+
