--- a/src/features/register/register.css
+++ b/src/features/register/register.css
@@ -6,10 +6,12 @@
   0% {
     transform: translate(0%, -10%) scale(1.2, 0.8);
   }
+
   30%,
   70% {
     transform: translate(0%, -50%) scale(1, 1);
   }
+
   100% {
     transform: translate(0%, -10%) scale(1.2, 0.8);
   }
@@ -61,7 +63,7 @@
 }
 
 .register-tab:hover {
-	color: rgb(99, 99, 99);
+  color: rgb(99, 99, 99);
 }
 
 .clothes-select {
@@ -126,15 +128,16 @@
 }
 
 .tab-underline {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		width: 50%;
-		height: 3px;
-		background-color: #11999E;
-		transform-origin: 0 0;
-		transition: transform .25s;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  height: 3px;
+  background-color: #11999E;
+  transform-origin: 0 0;
+  transition: transform .25s;
 }
+
 .tab-underline.second {
   transform: translateX(100%);
 }
@@ -150,6 +153,7 @@
   .scroll-to-info-btn {
     display: none;
   }
+
   .register-divider {
     display: none;
   }
@@ -168,10 +172,60 @@
   align-items: center;
 }
 
-.visually-hidden{
+.visually-hidden {
   display: none;
 }
 
 select {
   display: block;
+}
+
+/* CSS for payment successful/failed*/
+
+.container {
+  text-align: center;
+  padding: 20px;
+  background-color: #d4edda;
+  color: #155724;
+  border-radius: 8px;
+  margin: 50px;
+}
+
+.icon-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.icon-link {
+  text-decoration: none;
+  color: #007bff;
+  padding: 5px;
+  transition: color 0.3s ease;
+}
+
+.icon {
+  transition: color 0.2s ease;
+  font-Size: 50px;
+}
+
+.icon.facebook {
+  color: #1877F2;
+}
+
+.icon.instagram {
+  background: linear-gradient(45deg, #833AB4, #F77737, #FD1D1D, #FCAF45);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.icon.youtube {
+  color: #ff0000;
+}
+
+.video-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
