--- a/src/features/register/register.css
+++ b/src/features/register/register.css
@@ -49,7 +49,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 50%;
+  width: 33%;
   height: 3px;
   background-color: #11999E;
   transform-origin: 0 0;
@@ -58,6 +58,9 @@
 
 .tab-underline.second {
   transform: translateX(100%);
+}
+.tab-underline.third {
+  transform: translateX(200%);
 }
 
 .allowed-company-text-bg {
